fix nav spacing

--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
   line-height: 1.5;
 }
 p {
-  font-size: 20px;
+  font-size: 25px;
 }
 #navbar {
   position: fixed;
   top: 0;
   left: 0;
-  width: 240px;
+  width: 250px;
   height: 100%;
   border-right: solid;
   border-color: #455a64;
@@ -47,24 +47,29 @@ Header {
 
 #main-doc {
   position: absolute;
-  margin-left: 240px;
+  margin-left: 250px;
   padding: 10px;
 }
+
 code {
   background-color: white;
   margin-left: 20px;
   width: 95%;
   padding: 10px;
   display: block;
+  font-size: 20px;
+}
+li {
+  font-size: 20px;
 }
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
   #navbar {
-    width: 200px;
+    width: 225px;
   }
 }
 @media (max-width: 800px) {
   #main-doc {
     margin-left: 200px;
   }
-}
+} */
